auto-test/tests/chapter_15/valid/libraries/return_pointer_to_array.c

long (*return_row(long (*arr)[3][4], int idx))[4] {
    return arr[idx];
}