auto-test/tests/chapter_15/invalid_types/cast_to_array_type_2.c
int main(void)
{
    long arr[10];
    
    return (int *[10])arr;
}